<resources>
    <string name="app_name">YakBox</string>

    <!-- Main activity -->
    <string name="btn_say">Say</string>
    <string name="btn_play">Play</string>
    <string name="btn_yalp">yalP</string>
    <string name="txt_speed">Speed</string>
    <string name="txt_1.0x">1.0x</string>

    <!-- Menu items -->
    <string name="action_save">Save</string>
    <string name="action_load">Load</string>
    <string name="action_share">Share</string>
    <string name="action_about">About</string>
    <string name="low_volume_warning">Turn volume up!</string>

    <!-- Load activity -->
    <string name="title_activity_load">Load</string>
    <string name="delete_single_msg">Delete</string>
    <string name="delete_multiple_msg">Delete selected yaks?</string>
    <string name="delete_dialog_positive">Delete</string>
    <string name="delete_dialog_negative">Cancel</string>
    <!-- Load activity menus -->
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>

    <!-- Save / load dialogs -->
    <string name="save_dialog_title">Save</string>
    <string name="save_dialog_positive">Save</string>
    <string name="save_dialog_negative">Cancel</string>
    <string name="save_confirm_overwrite_message">File exists. Overwrite</string>

    <!-- About / help -->
    <string name="about_title">About</string>
    <string name="about_version_label">Version:</string>
    <string name="about_storage_label">Data dir:</string>
    <string name="about_storage_inaccessible_error">Error: can\'t access storage</string>
    <string name="about_usage_general_label">Usage</string>
    <string name="about_usage_general">Hold \'say\' to record something. Press \'Play\' to play back,
    press \'yalP\' to play in reverse. Playback speed can be adjusted using the speed slider.</string>
    <string name="about_usage_save_label">Saving</string>
    <string name="about_usage_save">To save the current recording, press \'save\' at the top.</string>
    <string name="about_usage_load_label">Loading &amp; deleting</string>
    <string name="about_usage_load">To load a recording, press \'load\' at the top, then select
    a recording by touching it. Long touch to delete recordings.</string>
    <string name="about_usage_accessing_files_label">Accessing Files</string>
    <string name="about_usage_accessing_files">See the top of this screen for the storage location.
    Note that /storage/sdcard0 is \"Internal Storage\" and /storage/sdcard1 is \"SD Card\" when
    accessing the device through a computer.</string>

    <!-- ACRA strings -->
    <string name="acra_dialog_title">Oops!</string>
    <string name="acra_dialog_text">YakBox crashed. Please help me fix it by sending an
        error report :) Pressing send will open your email app. You can send the email
        straight away, or add some comments if you want. If Yakbox keeps crashing,
        try restarting your device.</string>
    <string name="acra_dialog_btn_no">No thanks</string>
    <string name="acra_dialog_btn_yes">Send</string>


</resources>
