<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_save"
        android:title="@string/action_save"
        android:icon="@drawable/ic_save_white_48dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_load"
        android:title="@string/action_load"
        android:icon="@drawable/ic_load_white_48dp"
        android:orderInCategory="101"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        app:showAsAction="ifRoom"
        android:orderInCategory="102"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="200"
        app:showAsAction="never"/>
</menu>
